force-app/main/default/objects/Product_Model__c/Product_Model__c.object-meta.xml
<CustomObject>
    <label>Product Model</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>