force-app/main/default/objects/Product_Model__c/fields/External_Key_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Key_ID__c</fullName>
    <externalId>true</externalId>
    <label>*客户产品Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>