force-app/main/default/objects/Product_Model__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>产品编号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>