force-app/main/default/objects/Product_Model__c/fields/Quantity_Calcula__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Calcula__c</fullName>
    <label>Quantity Calcula</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>