force-app/main/default/objects/Product_Model__c/fields/Sales_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Sales_Quantity__c</fullName>
    <label>Sales Quantity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>