force-app/main/default/objects/Product_Model__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>